# Retixly-2.0Windows-main

./: main.py
Retixly-2.0-main/: .gitignore  LICENSE  README.md  Retixly.spec  analyze_size.bat  bootstrap.py  bootstrap_ui.py  build_config.spec  build_final.bat  build_large_installer.bat  build_lightweight.bat  build_portable.bat  build_portable_large.bat  build_release.bat  build_simple.bat  clean_build.bat  compile_translations.py  installer.nsi  installer_large.nsi  integration_carvekit_engine.py  lazy_loader.py  main.py  onnx_fix_script.py  pyproject.toml  requirements.txt  requirements_base.txt  setup.py  simple_fix.bat  test_bootstrap.py  version.json
Retixly-2.0-main/assets/styles/: light.qss
Retixly-2.0-main/data/: license.enc
Retixly-2.0-main/src/components/: image_view.py  marketplace_settings.py  settings_controller.py  thumbnail_list.py
Retixly-2.0-main/src/controllers/: batch_processor.py  export_controller.py  image_processor.py  license_controller.py  settings_controller.py  subscription_controller.py
Retixly-2.0-main/src/core/: carvekit_engine.py  image_engine.py  professional_bg_remover.py  updater.py  windows_detail_enhancer.py  windows_engine_backup.py
Retixly-2.0-main/src/models/: __init__.py  license.py  subscription.py
Retixly-2.0-main/src/services/: __init__.py  encryption_service.py  lemonsqueezy_api.py
Retixly-2.0-main/src/utils/: export_utils.py  file_utils.py  image_utils.py
Retixly-2.0-main/translations/: retixly_de.qm  retixly_de.ts  retixly_es.qm  retixly_es.ts  retixly_pl.qm  retixly_pl.ts
(+7 files in other folders)
